--- a/politseimäng.html
+++ b/politseimäng.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="et">
 <head>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Politsei Andmebaas - Main Page</title>
