--- a/politseimäng.html
+++ b/politseimäng.html
@@ -410,7 +410,7 @@ button.assigned-btn {
           // lisa veel ohvitsere...
         ];
 
-        let names = ["Kalle Rebane", "Liisa Tamm", "Priit Saar", "Eeva Leht", "Marko Mets", "Anabell Luu", "Meeli Jõesaar", "Robert Tamm", "Karolin Vahter"];
+        let names = ["Kalle Rebane", "Liisa Tamm", "Priit Saar", "Eeva Leht", "Marko Mets", "Anabell Luu", "Meeli Jõesaar", "Robert Tamm", "Karolin Vahter", "Magnus Sarmet", "Rainer Einblau", "Tundmatu"];
 
         let people = [
             {
@@ -439,7 +439,98 @@ button.assigned-btn {
                 previousCases: ["Pangarööv"],
                 isWanted: false,
                 avatar: "https://i.ibb.co/10B8rzF/images-2-1.png"
-            }
+            },
+
+    {
+        name: "Kalle Rebane - PATRULL", 
+        age: 42,
+        job: "Politseinik",
+        location: "Tallinn",
+        previousCases: ["Kiiruse ületamine 11-24km/h", "Liiklusõnnetus"],
+        isWanted: false,
+        avatar: "https://i.ibb.co/DwF0TtD/images-1-1.png"
+    },
+    {
+        name: "Liisa Tamm - korrakaitse politseikindral", 
+        age: 50,
+        job: "Politseikindral",
+        location: "Tartu",
+        previousCases: ["Joobes juhtimine", "Vägivallajuhtum politseinikuga"],
+        isWanted: false,
+        avatar: "https://i.ibb.co/DwF0TtD/images-1-1.png"
+    },
+    {
+        name: "Priit Saar - PATRULL", 
+        age: 36,
+        job: "Politseinik",
+        location: "Narva",
+        previousCases: ["Pangarööv", "Liiklusõnnetus"],
+        isWanted: false,
+        avatar: "https://i.ibb.co/DwF0TtD/images-1-1.png"
+    },
+    {
+        name: "Eeva Leht - PATRULL", 
+        age: 30,
+        job: "Politseinik",
+        location: "Tallinn",
+        previousCases: ["Koduvägivald", "Joobes juhtimine"],
+        isWanted: false,
+        avatar: "https://i.ibb.co/DwF0TtD/images-1-1.png"
+    },
+    {
+        name: "Pille Vits - PATRULL", 
+        age: 33,
+        job: "Politseinik",
+        location: "Pärnu",
+        previousCases: ["Salakaubavedu", "Korrarikkuja avalikus kohas"],
+        isWanted: false,
+        avatar: "https://i.ibb.co/DwF0TtD/images-1-1.png"
+    },
+    {
+        name: "Jenni Must - PATRULL", 
+        age: 28,
+        job: "Politseinik",
+        location: "Narva",
+        previousCases: ["Vargus", "Võltsitud dokument"],
+        isWanted: false,
+        avatar: "https://i.ibb.co/DwF0TtD/images-1-1.png"
+    },
+    {
+        name: "Ursula Treen - KRIMINAALPOLITSEI", 
+        age: 45,
+        job: "Kriminaalpolitseinik",
+        location: "Tallinn",
+        previousCases: ["Mõrvauurimine", "Narkokuritegu"],
+        isWanted: false,
+        avatar: "https://i.ibb.co/DwF0TtD/images-1-1.png"
+    },
+    {
+        name: "Reimo Rann - KRIMINAALPOLITSEI", 
+        age: 38,
+        job: "Kriminaalpolitseinik",
+        location: "Tartu",
+        previousCases: ["Pettus", "Rahapesu uurimine"],
+        isWanted: false,
+        avatar: "https://i.ibb.co/DwF0TtD/images-1-1.png"
+    },
+    {
+        name: "Toomas Perk - KIIRREAGEERIJA", 
+        age: 40,
+        job: "Kiirreageerija",
+        location: "Tallinn",
+        previousCases: ["Relvastatud rööv", "Terrorismikahtlus"],
+        isWanted: false,
+        avatar: "https://i.ibb.co/DwF0TtD/images-1-1.png"
+    },
+    {
+        name: "Karel Tael - KIIRREAGEERIJA", 
+        age: 35,
+        job: "Kiirreageerija",
+        location: "Tartu",
+        previousCases: ["Pantvangikriis", "Relvastatud rünnak"],
+        isWanted: false,
+        avatar: "https://i.ibb.co/DwF0TtD/images-1-1.png"
+    }
         ];
 
         function login() {
