--- a/politseimäng.html
+++ b/politseimäng.html
@@ -239,9 +239,12 @@ button.assigned-btn {
             background-color: #003f73;
         }
         .show-more {
+            padding: 4px;
+            margin: 4px;
+            font-size:x-small;
             cursor: pointer;
-            color: #0056a5;
-            text-decoration: underline;
+            color: white;
+            text-decoration: none;
         }
         .hidden-description {
             display: none;
